nats-micro/tests/ui/v2_missing_subject_argument.stderr
error: subject placeholder `user_id` requires a matching handler argument
 --> tests/ui/v2_missing_subject_argument.rs:6:14
  |
6 |     async fn get() {}
  |              ^^^
